--- a/BookingHotel/Areas/Admin/Views/RoomType/Add.cshtml
+++ b/BookingHotel/Areas/Admin/Views/RoomType/Add.cshtml
@@ -8,9 +8,14 @@
 
 <form asp-action="Add">
     <div class="form-group">
-        <label asp-for="Capacity" class="control-label"></label>
-        <input asp-for="Capacity" class="form-control" type="number" min="0" />
-        <span asp-validation-for="Capacity" class="text-danger"></span>
+        <label asp-for="Adults" class="control-label"></label>
+        <input asp-for="Adults" class="form-control" type="number" min="0" />
+        <span asp-validation-for="Adults" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Children" class="control-label"></label>
+        <input asp-for="Children" class="form-control" type="number" min="0" />
+        <span asp-validation-for="Children" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Description" class="control-label"></label>
