--- a/BookingHotel/Areas/Admin/Views/RoomType/Delete.cshtml
+++ b/BookingHotel/Areas/Admin/Views/RoomType/Delete.cshtml
@@ -12,10 +12,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Capacity)
+            @Html.DisplayNameFor(model => model.Adults)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Capacity)
+            @Html.DisplayFor(model => model.Adults)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Children)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Children)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
