--- a/BookingHotel/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/BookingHotel/Areas/Admin/Views/RoomType/Index.cshtml
@@ -13,9 +13,10 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Capacity</th>
+            <th>Adults</th>
+            <th>Children</th>
             <th>Description</th>
-            <th>Capacity</th>
+
             <th></th>
         </tr>
     </thead>
@@ -23,12 +24,12 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Capacity</td>
+                <td>@item.Adults</td>
+                <th>@item.Children</th>
                 <td>@item.Description</td>
-                <th>@item.Capacity</th>
+                
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Update" asp-route-id="@item.Id">Update</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
