--- a/BookingHotel/Areas/Admin/Views/RoomType/Update.cshtml
+++ b/BookingHotel/Areas/Admin/Views/RoomType/Update.cshtml
@@ -10,9 +10,14 @@
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
-        <label asp-for="Capacity" class="control-label"></label>
-        <input asp-for="Capacity" class="form-control" />
-        <span asp-validation-for="Capacity" class="text-danger"></span>
+        <label asp-for="Adults" class="control-label"></label>
+        <input asp-for="Adults" class="form-control" />
+        <span asp-validation-for="Adults" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Children" class="control-label"></label>
+        <input asp-for="Children" class="form-control" />
+        <span asp-validation-for="Children" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Description" class="control-label"></label>
