--- a/BookingHotel/Views/Shared/_Layout.cshtml
+++ b/BookingHotel/Views/Shared/_Layout.cshtml
@@ -22,27 +22,27 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Region" asp-action="Index">Trang chủ</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Region" asp-action="Index">Trang chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Hotel" asp-action="Index">Phòng</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Hotel" asp-action="Index">Phòng</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Liên hệ</a>
+                        <a class="nav-link text-white" href="#">Liên hệ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="ShoppingCart" asp-action="Index">
+                        <a class="nav-link text-white" asp-area="" asp-controller="ShoppingCart" asp-action="Index">
                             <span class="fa fa-shopping-cart"></span> 
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Booking" asp-action="History">Ls đặt</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Booking" asp-action="History">Ls đặt</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
+                @* <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search hotels..." aria-label="Search">
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Tìm kiếm</button>
-                </form>
+                </form> *@
                 <partial name="_LoginPartial" />
             </div>
         </nav>
