--- a/BookingHotel/wwwroot/css/site.css
+++ b/BookingHotel/wwwroot/css/site.css
@@ -8,9 +8,9 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+/*.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
+}*/
 
 html {
   position: relative;
@@ -36,3 +36,4 @@ body {
 btn_log_sign {
     height: 100px;
 }
+
