--- a/BookingHotel/Views/Booking/History.cshtml
+++ b/BookingHotel/Views/Booking/History.cshtml
@@ -18,7 +18,7 @@ else
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
+        @* <tbody>
             @foreach (var booking in Model)
             {
                 <tr>
@@ -31,6 +31,6 @@ else
                     </td>
                 </tr>
             }
-        </tbody>
+        </tbody> *@
     </table>
 }
