--- a/BookingHotel/Views/Hotel/Index.cshtml
+++ b/BookingHotel/Views/Hotel/Index.cshtml
@@ -7,11 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        /*------backgound-slidem--------*/
+        .backgound-slide {
+            position: relative;
+            width: 100%;
+            height: 500px; /* Đặt chiều cao của backgound-slide */
+            background-color: #f8f9fa; /* Màu nền của backgound-slide */
+            overflow: hidden; /* Ẩn bất kỳ nội dung nào vượt quá kích thước của backgound-slide */
+        }
+
+        .slick-slide img {
+            width: 100%;
+            height: 500px;
+            object-fit: cover;
+        }
+
         /*--------------book--------*/
         .flex {
             display: flex;
-            margin-top: 10%;
         }
 
         .grid {
@@ -67,15 +83,15 @@
 
         /* Giới hạn chiều dài card */
         /* .card {
-            height: 30%;
-        } */
+                    height: 30%;
+                } */
 
         /* Định dạng hình ảnh */
         .card-img {
             width: 100%;
-            height: 200px; 
+            height: 200px;
             object-fit: cover;
-            border-radius: 5px; 
+            border-radius: 5px;
             margin: 20px 10px 20px 10px;
         }
 
@@ -89,6 +105,15 @@
     </style>
 </head>
 <body>
+    <section class="backgound-slide">
+        <div class="single-item">
+            <img src="/images/images_Region_Index/carousel1.jpg" alt="" class="slide active" onclick="img('/images/images_Region_Index/carousel1.jpg')">
+            <img src="/images/images_Region_Index/carousel2.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/carousel2.jpg')">
+            <img src="/images/images_Region_Index/carousel3.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/carousel3.jpg')">
+            <img src="/images/images_Region_Index/carousel4.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/carousel4.jpg')">
+            <img src="/images/images_Region_Index/carousel5.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/carousel5.jpg')">
+        </div>
+    </section>
     <section class="book">
         <div class="container flex">
             <div class="input grid">
@@ -153,5 +178,13 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js" integrity="sha512-eP8DK17a+MOcKHXC5Yrqzd8WI5WKh6F1TIk5QZ/8Lbv+8ssblcz7oGC8ZmQ/ZSAPa7ZmsCU4e/hcovqR8jfJqA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $('.single-item').slick();
+    </script>
+
+
 </body>
 </html>
