--- a/BookingHotel/Views/ShoppingCart/Checkout.cshtml
+++ b/BookingHotel/Views/ShoppingCart/Checkout.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Checkout</h1>
 
-<div>
+@* <div>
     <h2>Booking Details</h2>
     <form asp-action="Checkout" method="post">
         <div class="form-group">
@@ -21,7 +21,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Place Booking</button>
     </form>
-</div>
+</div> *@
 
 @section Scripts {
     @{
