--- a/BookingHotel/Views/ShoppingCart/CheckoutNowForm.cshtml
+++ b/BookingHotel/Views/ShoppingCart/CheckoutNowForm.cshtml
@@ -2,7 +2,7 @@
 
 <h1>CheckoutNow</h1>
 
-<div>
+@* <div>
     <h2>Booking Details</h2>
     <form asp-action="CheckoutNow" method="post">
         <input type="hidden" name="RoomId" value="@ViewBag.RoomId" />
@@ -26,7 +26,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Place Booking</button>
     </form>
-</div>
+</div> *@
 
 @section Scripts {
     @{
